fix pointer event on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   color: white;
 }
+body, canvas {
+  touch-action: none;
+}
 body {
   width: 100vw;
   height: 100%;
@@ -82,7 +85,7 @@ height: 100svh;
 }
 .nav{
   width: 100%;
-  padding: 3rem 0 0;
+  padding: 2vh 0 0;
   display: flex;
   justify-content: space-between;
 }
